# ral

./: .gitignore  CAPABILITIES.md  Cargo.toml  Debian.md  Dockerfile  Homebrew.md  TUTORIAL.md  clippy.toml  cloud-release.ral  compose.heritable.yaml  compose.imbl.yaml  compose.yaml  deploy-public.ral  deploy-public.sh  package-lock.json  rust-toolchain.toml  streaming_markdown.md
.github/workflows/: build-binaries.yml  ci.yml  pages.yml  publish-exarch-box.yml
core/: Cargo.toml  build.rs
core/src/: ansi.rs  ast.rs  builtins.rs  capability.rs  classify.rs  compat.rs  diagnostic.rs  elaborator.rs  evaluator.rs  exit_hints.rs  group.rs  io.rs  ir.rs  lexer.rs  lib.rs  parser.rs  path.rs  prelude.ral  sandbox.rs  serial.rs  signal.rs  span.rs  step.rs  ty.rs  typecheck.rs  types.rs  util.rs
core/src/builtins/: codecs.rs  collections.rs  control.rs  editor.rs  fs.rs  misc.rs  modules.rs  path.rs  plugin.rs  predicates.rs  scope.rs  strings.rs  util.rs  uutils.rs
core/src/capability/: check.rs  effective.rs  exec.rs
core/src/evaluator/: audit.rs  case.rs  dispatch.rs  exec.rs  expr.rs  invoke.rs  pipeline.rs  trampoline.rs
core/src/evaluator/pipeline/: group.rs  stages.rs
core/src/path/: canon.rs  lex.rs  resolver.rs  sigil.rs  which.rs
core/src/sandbox/: ipc.rs  linux.rs  macos.rs  mod.rs  reexec.rs  runner.rs  spawn.rs  windows.rs
core/src/sandbox/ipc/: child.rs  transport.rs  wire.rs
core/src/signal/: unix.rs  windows.rs
core/src/typecheck/: builtins.rs  env.rs  fmt.rs  generalize.rs  infer.rs  scheme.rs  ty.rs  unify.rs
core/src/types/: capability.rs  control.rs  dynamic.rs  env.rs  plugin.rs  registry.rs  repl.rs  shell.rs  value.rs
core/tests/: eval_fuzz.rs  fuzz.rs  type_system.rs  typecheck.rs
core/tests/common/: mod.rs
data/: exit-hints.txt  help.txt  usage.txt
docs/: 240409_recursive_types.txt  260408_claude_ral.md  260408_claude_research.md  260428_capabilities_refactor.md  260430_flow.md  260501_phase_e_retire_values.md  260501_variants.md  260502_backtick_tags_commas.md  260502_value_equirec.md  260504_grant_capability_design.md  260504_hot_path_cancel.md  260504_old_points_of_smell.md  260504_patterns.md  260506_2_better_pipes.md  260506_process_staged_pipeline.md  260506_structured_wait_terminal_policy.md  CHANGELOG.md  RAL_GUIDE.md  RATIONALE.md  SPEC.md  concurrency-io-review.md  improve-language.md  interactive-improvement.md  plugin-improvements.md  uutils-pipe-hang.md
editors/ral-syntax/: ral.sublime-syntax
editors/tree-sitter-ral/: grammar.js  package.json  ral.dylib
exarch/: Cargo.toml  PROFILES.md  README.md  build.rs
exarch/data/: banner.txt  confined.exarch.toml  dangerous.exarch.toml  dev-mac.exarch.toml  eagle.txt  minimal.exarch.toml  ral.md  reasonable.exarch.toml  system.md
exarch/docker/: Dockerfile  Dockerfile.local  README.md  build.sh  compose.local.yaml  compose.yaml  entrypoint.sh
exarch/scripts/: install.ral
exarch/src/: api.rs  cancel.rs  cli.rs  eval.rs  grant.rs  host.rs  main.rs  policy.rs  prompt.rs  runtime.rs  ui.rs
exarch/src/policy/: base.rs
mcp/: README.md  package-lock.json  package.json  server.js  setup-mcp.zsh
packaging/debian/: postrm
plugins/: autosuggestion.ral  fzf-cd.ral  fzf-history.ral  zoxide.ral
ral-sh/src/: main.rs
ral/src/: jobs.rs  main.rs  platform.rs  repl.rs
ral/src/repl/: builtins.rs  complete.rs  config.rs  cursor.rs  errfmt.rs  exec.rs  frontend.rs  plugin.rs  prompt.rs
ral/tests/: minimal_mode.rs  pipeline.rs  scripts.rs  spawn_dyn_context.rs  spawn_io.rs  variants.rs
scripts/: build-install.ral  build-install.sh  build-release.ral  install-treesitter.ral  install.ral  install.sh  render-site-index.py
sgai-demo/: 01-word-splitting.ral  02-map.ral  03-errors.ral  04-concurrency.ral  05-powerhouse.ral  presenterm-config.yaml  slides.md
sgai-demo/snippets/: analyser-core.ral  analyser.ral  concurrency.ral  errors.ral  grant-intro.ral  map.ral  powerhouse-analyse.ral  powerhouse-fanout.ral  values.ral  word-splitting-for.ral
site/: downloads.json  spec.html
tests/builtins/: assert-eq.ral  audit-tree.ral  audit.ral  concurrency.ral  equal.ral  errors.ral  filesystem.ral  first-ok.ral  glob.ral  grant-plugin.ral  grep-files.ral  json.ral  parallel.ral  predicates.ral  sets.ral  shell-split.ral  stdin-redirect.ral  strings.ral  try-errors.ral  which.ral  with-mocking.ral  within.ral
tests/lang/: arithmetic.ral  blocks-and-forcing.ral  capture-semantics.ral  collections.ral  conditionals.ral  control-flow.ral  destructuring.ral  failure-propagation.ral  modules.ral  records.ral  strings.ral  variables.ral
tests/practical/: args.ral  batch-convert.ral  file-ops.ral  log-processor.ral  safety.ral  scripting.ral
tests/unix/: environment.ral  pipes.ral
worktrees/ral-data-last-pipeline/: .snapshot-ref  Cargo.toml  LICENSE-MIT  README.md  TUTORIAL.md
worktrees/ral-data-last-pipeline/.github/workflows/: build-binaries.yml  publish-exarch-box.yml
worktrees/ral-data-last-pipeline/HomebrewFormula/: ral.rb
worktrees/ral-data-last-pipeline/core/src/: ansi.rs  ast.rs  builtins.rs  capability.rs  compat.rs  debug.rs  (+11 more)
worktrees/ral-data-last-pipeline/data/: help.txt
worktrees/ral-data-last-pipeline/docs/: IMPLEMENTATION.md  PLUGINS.md  RAL_GUIDE.md  SPEC.md  rc.example
worktrees/ral-data-last-pipeline/editors/: README.md  nvim.md
worktrees/ral-data-last-pipeline/exarch/: Cargo.toml  build.rs
worktrees/ral-data-last-pipeline/plugins/: fzf-files.ral  zoxide.ral
worktrees/ral-data-last-pipeline/ral/: Cargo.toml  build.rs
worktrees/ral-data-last-pipeline/ral-sh/: Cargo.toml
worktrees/ral-data-last-pipeline/ral/src/: jobs.rs  main.rs  repl.rs
worktrees/ral-data-last-pipeline/ral/src/repl/: builtins.rs  config.rs  cursor.rs  errfmt.rs  keybinding.rs  plugin.rs
worktrees/ral-data-last-pipeline/ral/tests/: pipeline.rs  scripts.rs  spawn_watch.rs
worktrees/ral-data-last-pipeline/ral/tests/common/: mod.rs
worktrees/ral-data-last-pipeline/scripts/: build-release.sh
worktrees/ral-data-last-pipeline/site/: index.template.html  rationale.html
(+80 files in other folders)
