[package]
name = "ral-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
coreutils = [
    "dep:uu_ls",    "dep:uu_cat",   "dep:uu_wc",    "dep:uu_head",  "dep:uu_tail",
    "dep:uu_cp",    "dep:uu_cut",   "dep:uu_mkdir",  "dep:uu_mv",   "dep:uu_rm",
    "dep:uu_sort",  "dep:uu_tee",   "dep:uu_touch", "dep:uu_tr",
    "dep:uu_uniq",  "dep:uu_yes",   "dep:uu_basename","dep:uu_comm", "dep:uu_date",
    "dep:uu_df",    "dep:uu_dirname","dep:uu_du",    "dep:uu_env",   "dep:uu_join",
    "dep:uu_ln",    "dep:uu_paste", "dep:uu_printf", "dep:uu_sleep",
    "dep:uu_arch",  "dep:uu_b2sum", "dep:uu_base32", "dep:uu_base64","dep:uu_basenc",
    "dep:uu_cksum", "dep:uu_csplit","dep:uu_dd",    "dep:uu_dir",   "dep:uu_dircolors",
    "dep:uu_expand","dep:uu_expr",  "dep:uu_factor", "dep:uu_fmt",   "dep:uu_fold",
    "dep:uu_hostname","dep:uu_link","dep:uu_md5sum", "dep:uu_mktemp","dep:uu_nl",
    "dep:uu_nproc", "dep:uu_numfmt","dep:uu_od",    "dep:uu_pr",    "dep:uu_printenv",
    "dep:uu_ptx",   "dep:uu_pwd",   "dep:uu_readlink","dep:uu_realpath","dep:uu_rmdir",
    "dep:uu_sha1sum","dep:uu_sha224sum","dep:uu_sha256sum","dep:uu_sha384sum","dep:uu_sha512sum",
    "dep:uu_shred", "dep:uu_shuf",  "dep:uu_sum",   "dep:uu_sync",  "dep:uu_tac",
    "dep:uu_test",  "dep:uu_truncate","dep:uu_tsort","dep:uu_uname", "dep:uu_unexpand",
    "dep:uu_unlink","dep:uu_vdir",  "dep:uu_whoami",
]
diffutils = ["dep:diffutils"]
grep      = ["dep:grep", "dep:regex"]

[dependencies]
os_pipe       = "1"
glob          = "0.3"
regex         = { version = "1", optional = true }
shlex         = "1.3"
tempfile      = "3.27"
serde         = { version = "1", features = ["derive", "rc"] }
serde_json    = "1"
anstyle-query = "1"
ariadne       = "0.6"
uu_ls        = { version = "0.8", optional = true }
uu_cat       = { version = "0.8", optional = true }
uu_wc        = { version = "0.8", optional = true }
uu_head      = { version = "0.8", optional = true }
uu_tail      = { version = "0.8", optional = true }
uu_cp        = { version = "0.8", optional = true }
uu_cut       = { version = "0.8", optional = true }
uu_mkdir     = { version = "0.8", optional = true }
uu_mv        = { version = "0.8", optional = true }
uu_rm        = { version = "0.8", optional = true }
uu_sort      = { version = "0.8", optional = true }
uu_tee       = { version = "0.8", optional = true }
uu_touch     = { version = "0.8", optional = true }
uu_tr        = { version = "0.8", optional = true }
uu_uniq      = { version = "0.8", optional = true }
uu_yes       = { version = "0.8", optional = true }
uu_basename  = { version = "0.8", optional = true }
uu_comm      = { version = "0.8", optional = true }
uu_date      = { version = "0.8", optional = true }
uu_df        = { version = "0.8", optional = true }
uu_dirname   = { version = "0.8", optional = true }
uu_du        = { version = "0.8", optional = true }
uu_env       = { version = "0.8", optional = true }
uu_join      = { version = "0.8", optional = true }
uu_ln        = { version = "0.8", optional = true }
uu_paste     = { version = "0.8", optional = true }
uu_printf    = { version = "0.8", optional = true }
uu_sleep     = { version = "0.8", optional = true }
diffutils    = { version = "0.5", optional = true }
grep         = { version = "0.4", optional = true }
uu_arch      = { version = "0.8", optional = true }
uu_b2sum     = { version = "0.8", optional = true }
uu_base32    = { version = "0.8", optional = true }
uu_base64    = { version = "0.8", optional = true }
uu_basenc    = { version = "0.8", optional = true }
uu_cksum     = { version = "0.8", optional = true }
uu_csplit    = { version = "0.8", optional = true }
uu_dd        = { version = "0.8", optional = true }
uu_dir       = { version = "0.8", optional = true }
uu_dircolors = { version = "0.8", optional = true }
uu_expand    = { version = "0.8", optional = true }
uu_expr      = { version = "0.8", optional = true }
uu_factor    = { version = "0.8", optional = true }
uu_fmt       = { version = "0.8", optional = true }
uu_fold      = { version = "0.8", optional = true }
uu_hostname  = { version = "0.8", optional = true }
uu_link      = { version = "0.8", optional = true }
uu_md5sum    = { version = "0.8", optional = true }
uu_mktemp    = { version = "0.8", optional = true }
uu_nl        = { version = "0.8", optional = true }
uu_nproc     = { version = "0.8", optional = true }
uu_numfmt    = { version = "0.8", optional = true }
uu_od        = { version = "0.8", optional = true }
uu_pr        = { version = "0.8", optional = true }
uu_printenv  = { version = "0.8", optional = true }
uu_ptx       = { version = "0.8", optional = true }
uu_pwd       = { version = "0.8", optional = true }
uu_readlink  = { version = "0.8", optional = true }
uu_realpath  = { version = "0.8", optional = true }
uu_rmdir     = { version = "0.8", optional = true }
uu_sha1sum   = { version = "0.8", optional = true }
uu_sha224sum = { version = "0.8", optional = true }
uu_sha256sum = { version = "0.8", optional = true }
uu_sha384sum = { version = "0.8", optional = true }
uu_sha512sum = { version = "0.8", optional = true }
uu_shred     = { version = "0.8", optional = true }
uu_shuf      = { version = "0.8", optional = true }
uu_sum       = { version = "0.8", optional = true }
uu_sync      = { version = "0.8", optional = true }
uu_tac       = { version = "0.8", optional = true }
uu_test      = { version = "0.8", optional = true }
uu_truncate  = { version = "0.8", optional = true }
uu_tsort     = { version = "0.8", optional = true }
uu_uname     = { version = "0.8", optional = true }
uu_unexpand  = { version = "0.8", optional = true }
uu_unlink    = { version = "0.8", optional = true }
uu_vdir      = { version = "0.8", optional = true }
uu_whoami    = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ctrlc        = "3"
windows-sys  = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
