[package]
name = "exarch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[[bin]]
name = "exarch"
path = "src/main.rs"

[features]
coreutils = ["ral-core/coreutils"]
diffutils = ["ral-core/diffutils"]

[dependencies]
ral-core   = { path = "../core", features = ["grep"] }
reqwest    = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio      = { version = "1", features = ["rt", "macros", "time"] }
libc       = "0.2"
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml       = "1"
postcard   = { version = "1", features = ["alloc"] }
clap       = { version = "4", features = ["derive"] }
rustyline  = "=18.0.0"
termimad   = "0.34"

[build-dependencies]
ral-core = { path = "../core" }
postcard = { version = "1", features = ["alloc"] }
