[package]
name = "exarch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[[bin]]
name = "exarch"
path = "src/main.rs"

[features]
coreutils = ["ral-core/coreutils"]
diffutils = ["ral-core/diffutils"]

[dependencies]
ral-core   = { path = "../core", features = ["grep", "coreutils"] }
reqwest    = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
tokio      = { version = "1", features = ["rt", "macros", "time"] }
eventsource-stream = "0.2"
futures-util = { version = "0.3", default-features = false }
libc       = "0.2"
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml       = "1"
postcard   = { version = "1", features = ["alloc"] }
clap       = { version = "4", features = ["derive"] }
ratatui      = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm    = "0.29"
termimad     = "0.34"
ansi-to-tui  = "8"
os_info    = { version = "3", default-features = false }

[build-dependencies]
ral-core = { path = "../core" }
postcard = { version = "1", features = ["alloc"] }
