[package]
name = "ral"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "ral"

[lints]
workspace = true

[[bin]]
name = "ral"
path = "src/main.rs"

[features]
coreutils  = ["ral-core/coreutils"]
diffutils  = ["ral-core/diffutils"]
grep       = ["ral-core/grep"]

[dependencies]
ral-core  = { path = "../core" }
rustyline  = "=18.0.0"
postcard   = { version = "1", features = ["alloc"] }
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
name = "ral"
maintainer = "Alex Kavvos <alex.kavvos@bristol.ac.uk>"
copyright = "2024 Alex Kavvos"
license-file = ["../LICENSE-MIT", "4"]
extended-description = """\
ral is a shell based on algebraic effects. It provides a clean, typed
command language with first-class pipelines, structured data, and
job control. ral-sh is included as a POSIX-bridge login shell that
forwards non-interactive invocations to /bin/sh."""
depends = "$auto"
section = "shells"
priority = "optional"
maintainer-scripts = "../packaging/debian"
assets = [
    { source = "../target/release/ral",    dest = "/usr/bin/ral",    mode = "755" },
    { source = "../target/release/ral-sh", dest = "/usr/bin/ral-sh", mode = "755" },
    { source = "../docs/SPEC.md",          dest = "/usr/share/doc/ral/SPEC.md",          mode = "644" },
    { source = "../TUTORIAL.md",           dest = "/usr/share/doc/ral/TUTORIAL.md",       mode = "644" },
]

[build-dependencies]
ral-core = { path = "../core" }
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.27"
